# libtcod

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Android.mk  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LIBTCOD-CREDITS.txt  LIBTCOD-LICENSE.txt  LICENSE.txt  MANIFEST.in  README-linux-SDL2.md  README-linux-SDL2.txt  README.md  appveyor.yml  build.bat  conanfile.py  cprotos.py  libtcod-CHANGELOG.txt  libtcod.cfg  libtcodlua.lua  libtcodpy.py  makefile-linux  makefile-linux-nodeps  makefile-linux64  makefile-mingw  makefile-osx  makefile-samples-linux  makefile-samples-mingw  sample.cfg  samples_c.c  samples_cpp.cpp  (+4 more)
autotools/: Makefile.am  aclocal.m4  configure.ac
autotools/src/: Makefile.am
autotools/src/gui/: Makefile.am
buildsys/autotools/: Makefile.am  README.md  configure.ac  get_version.py  libtcod-fov.pc.in  libtcod.pc.in  sources.am  unittest.sh
buildsys/autotools/m4/: am_path_sdl2.m4
samples/: CMakeLists.txt  README.md  apfviewer.cpp  conanfile.py  gendoc.cpp  samples_c.c  samples_cpp.cpp
samples/doctcod/: doctcod.cpp  page.tpl
samples/frost/: CMakeLists.txt  README.md  frost.cpp
samples/hmtool/: CMakeLists.txt  README.md  README.txt  hmtool.cpp  operation.cpp  operation.hpp
samples/navier/: CMakeLists.txt  README.md  main.cpp  main.hpp
samples/rad/: CMakeLists.txt  README.md  README.txt  bsp_helper.cpp  bsp_helper.hpp  main.cpp  rad_shader.cpp  rad_shader.hpp  rad_shader_photon.cpp  rad_shader_standard.cpp
samples/ripples/: CMakeLists.txt  README.md  main.cpp  main.hpp  util_ripples.cpp  util_ripples.hpp
samples/showcase/: CMakeLists.txt  samples_c.c  samples_cpp.cpp
samples/weather/: CMakeLists.txt  README.md  main.cpp  main.hpp  util_weather.cpp  util_weather.hpp
samples/worldgen/: CMakeLists.txt  README.md  README.txt  main.cpp  main.hpp  util_worldgen.cpp  util_worldgen.hpp
src/: CMakeLists.txt  LIBTCODConfig.cmake.in  LibtcodConfig.cmake.in  README.txt  backend.h  bresenham.cpp  bresenham_c.c  bsp.cpp  bsp.h  bsp_c.c  color.cpp  color.hpp  color_c.c  console.cpp  console.h  console.hpp  console_c.c  console_c.cpp  console_printing.c  console_rexpaint.c  console_rexpaint.h  console_types.h  fov.cpp  fov_c.c  fov_circular_raycasting.c  fov_diamond_raycasting.c  fov_digital.c  fov_permissive.c  fov_permissive2.c  fov_recursive_shadowcasting.c  fov_restrictive.c  fov_types.h  heightmap.cpp  heightmap_c.c  howto.hpp  image.cpp  image.h  image_c.c  lex.cpp  lex.h  (+58 more)
src/backend/: backend.cc  backend.h
src/color/: canvas.cc  canvas.h
src/engine/: backend.cc  backend.h  display.cc  display.h  globals.cc  globals.h
src/gui/: README.txt  button.cpp  container.cpp  flatlist.cpp  hbox.cpp  hbox.hpp  image.cpp  label.cpp  label.hpp  radiobutton.cpp  slider.cpp  statusbar.cpp  textbox.cpp  togglebutton.cpp  togglebutton.hpp  toolbar.cpp  toolbar.hpp  vbox.cpp  widget.cpp
src/hmtool/: README.txt  hmtool.cpp  operation.cpp  operation.hpp
src/hmtool/gui/: button.cpp  button.hpp  container.hpp  gui.hpp  hbox.cpp  hbox.hpp  image.hpp  label.hpp  radiobutton.hpp  slider.cpp  slider.hpp  statusbar.hpp  textbox.cpp  textbox.hpp  togglebutton.cpp  togglebutton.hpp  toolbar.hpp  vbox.cpp  vbox.hpp  widget.cpp  widget.hpp
src/libtcod/: bresenham.cpp  bresenham.h  bresenham.hpp  bresenham_c.c  bsp.cpp  bsp.h  bsp.hpp  bsp_c.c  color.c  color.cpp  color.h  color.hpp  color_.cpp  color_c.c  config.h  console.c  console.cpp  console.h  console.hpp  console_.cpp  console_c.c  console_c.cpp  console_drawing.c  console_drawing.h  console_etc.c  console_etc.h  console_init.c  console_init.h  console_init_.cpp  console_printing.c  console_printing.h  console_printing.hpp  console_rexpaint.c  console_rexpaint.h  console_rexpaint.hpp  console_types.h  console_types.hpp  context.c  context.h  context.hpp  (+138 more)
src/libtcod-fov/: bresenham.hpp  bresenham_c.c  config.h  error.c  error.hpp  fov.hpp  fov_diamond_raycasting.c  fov_types.h  logging.c  logging.h  utility.h  version.h
src/libtcod/color/: canvas.cpp  canvas.h  color.h
src/libtcod/console/: console.c  console.cpp  console.h  drawing.c  drawing.cpp  drawing.h  printing.c  printing.cpp  printing.h  rexpaint.c  rexpaint.cpp  rexpaint.h
src/libtcod/engine/: backend.cpp  backend.h  display.c  display.cpp  display.h  display_cpp.cpp  error.cpp  error.h  globals.cpp  globals.h
src/libtcod/gui/: button.cpp  button.hpp  container.cpp  container.hpp  flatlist.cpp  flatlist.hpp  gui.hpp  gui_portability.hpp  hbox.cpp  hbox.hpp  image.cpp  image.hpp  label.cpp  label.hpp  radiobutton.cpp  radiobutton.hpp  slider.cpp  slider.hpp  statusbar.cpp  statusbar.hpp  textbox.cpp  textbox.hpp  togglebutton.cpp  togglebutton.hpp  toolbar.cpp  toolbar.hpp  vbox.cpp  vbox.hpp  widget.cpp  widget.hpp
src/libtcod/pathfinding/: astar.cpp  astar.h  breadth-first.cpp  breadth-first.h  dijkstra.cpp  dijkstra.h  generic.cpp  generic.h  graph.cpp  graph.h  hill-climb.cpp  hill-climb.h
src/libtcod/sdl2/: console_2tris.glslf  console_2tris.glslv  event.cpp  (+20 more)
src/png/: lodepng.c  lodepng.h
src/sdl2/: legacy_backend.cc  legacy_backend.h  sdl2_alias.cc  sdl2_alias.h  sdl2_display.cc  sdl2_display.h  sdl2_renderer.cc  sdl2_renderer.h
src/tileset/: observer.cc  observer.h  tile.cc  tile.h  tileset.cc  tileset.h  tilesheet.cc  tilesheet.h
src/utility/: vector2.h
src/zlib/: gzguts.h
swig/: BackgroundHelperFunctions.hpp  CMakeLists.txt  ColorHelperFunctions.hpp  libtcod.i
swig/csharp-project/: Manual Step Required Note.txt  libtcod-net.sln
tests/: CMakeLists.txt  catch.cpp  catch.hpp  catch_reporter_automake.hpp  catch_reporter_tap.hpp  common.h  common.hpp  conanfile.py  test_bresenham.cpp  test_bsp.cpp  test_color.cpp  test_console.cpp  test_console_drawing.cpp  test_context.cpp  test_fov.cpp  test_headers.cpp  test_heightmap.cpp  test_image.cpp  test_list.cpp  test_logging.cpp  test_matrix.cpp  test_parser.cpp  test_printing.cpp  test_rexpaint.cpp  test_tileset.cpp  test_timer.cpp  test_zip.cpp  unittest.cpp
(+680 files in other folders)
